--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h2>About Me</h2>
         <img src="images/1000085983.jpg" alt="Photo of me">
         <p class="floating-text">
-            Hi, I’m Mathew, a passionate photographer who loves capturing real moments and natural beauty.
+            Hi, I’m Mathew, a passionate photographer: who loves capturing real moments and natural beauty.
             Photography allows me to tell stories without words, freezing emotions, light, and life in a single frame.
             I enjoy exploring nature, city life, and portraits, always searching for unique angles and perfect lighting.
             Through my lens, I aim to preserve memories and share the world as I see it — full of detail, feeling, and
