--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
 
     <section id="gallery">
-        <h2>My Favorite Photos</h2>
+        <h2>My Favorite: Photos</h2>
         <ul>
             <figure class="photo">
                 <li><img src="images/sunset vew.jpg" alt="Sunset view"></li>
